--- a/locales/uk.json
+++ b/locales/uk.json
@@ -14,7 +14,13 @@
     "cmd_ping_desc": "Перевірити затримку бота",
     "cmd_lang_desc": "Встановити мову бота для цього сервера",
     "cmd_lang_param": "Код мови (en, uk)",
-    "ok_lang_set": "Мову встановлено: **{lang}**"
+    "ok_lang_set": "Мову встановлено: **{code}**",
+    "lang_current": "Поточна мова: **{code}**",
+    "nav_prev": "Попередня",
+    "nav_next": "Наступна",
+    "nav_close": "Закрии",
+    "nav_not_author": "Ця панель доступна лише автору запиту.",
+    "page_n": "Сторінка {n}"
   },
   "labels": {
     "id": "ID",
