--- a/locales/en.json
+++ b/locales/en.json
@@ -20,7 +20,23 @@
     "nav_next": "Next",
     "nav_close": "Close",
     "nav_not_author": "This panel is only available to the requester.",
-    "page_n": "Page {n}"
+    "page_n": "Page {n}",
+    "cmd_price_desc": "Show commodity prices (terminal optional)",
+    "cmd_price_param_commodity": "Commodity name",
+    "cmd_price_param_terminal": "Terminal (optional)",
+    "cmd_price_history_desc": "Commodity price history",
+    "cmd_route_desc": "Trade route and profit",
+    "cmd_route_param_from": "From (terminal)",
+    "cmd_route_param_to": "To (terminal, optional)",
+    "cmd_route_param_scu": "How many SCU",
+    "cmd_alerts_desc": "Price/stock alerts",
+    "cmd_fuel_desc": "Fuel prices",
+    "cmd_about_desc": "About the bot and game version",
+    "err_price_fetch": "Failed to fetch prices: {msg}",
+    "err_route_fetch": "Failed to fetch route: {msg}",
+    "err_fuel_fetch": "Failed to fetch fuel: {msg}",
+    "err_history_fetch": "Failed to fetch price history: {msg}",
+    "err_no_matches": "No matches found"
   },
   "labels": {
     "id": "ID",
@@ -30,7 +46,17 @@
     "in_game": "In-game",
     "mining_related": "Mining-related",
     "yes": "yes",
-    "no": "no"
+    "no": "no",
+    "buy": "Buy",
+    "sell": "Sell",
+    "profit_per_unit": "Profit/unit",
+    "profit_total": "Total profit",
+    "terminal": "Terminal",
+    "location": "Location",
+    "scu": "SCU",
+    "commodity": "Commodity",
+    "game_version": "Game version",
+    "updated": "Updated"
   },
   "categories": {
     "Arms": "Arms",
