--- a/locales/uk.json
+++ b/locales/uk.json
@@ -56,7 +56,8 @@
     "scu": "SCU",
     "commodity": "Товар",
     "game_version": "Версія гри",
-    "updated": "Оновлено"
+    "updated": "Оновлено",
+    "avg": "Середн."
   },
   "categories": {
     "Arms": "Броня: Руки",
