fix about command with uptime

--- a/locales/en.json
+++ b/locales/en.json
@@ -57,6 +57,7 @@
     "commodity": "Commodity",
     "game_version": "Game version",
     "updated": "Updated",
+    "uptime": "Uptime",
     "avg": "Avg",
     "mcs": "MCS"
   },
