--- a/locales/uk.json
+++ b/locales/uk.json
@@ -57,6 +57,7 @@
     "commodity": "Товар",
     "game_version": "Версія гри",
     "updated": "Оновлено",
+    "uptime": "Час роботи",
     "avg": "Середн.",
     "mcs": "MCS"
   },
