--- a/locales/uk.json
+++ b/locales/uk.json
@@ -36,7 +36,11 @@
     "err_route_fetch": "Не вдалося отримати маршрут: {msg}",
     "err_fuel_fetch": "Не вдалося отримати паливо: {msg}",
     "err_history_fetch": "Не вдалося отримати історію цін: {msg}",
-    "err_no_matches": "Нічого не знайдено"
+    "err_no_matches": "Нічого не знайдено",
+    "no_buy_locations": "Немає доступних локацій купівлі.",
+    "no_sell_locations": "Немає доступних локацій продажу.",
+    "route_no_scu": "Вкажіть корабель або SCU, щоб порахувати прибуток.",
+    "no_profitable_route": "Немає вигідних маршрутів або локації для купівлі та продажу збігаються."
   },
   "labels": {
     "id": "ID",
@@ -59,7 +63,13 @@
     "updated": "Оновлено",
     "uptime": "Час роботи",
     "avg": "Середн.",
-    "mcs": "MCS"
+    "mcs": "MCS",
+    "buy_locations": "Локації купівлі",
+    "sell_locations": "Локації продажу",
+    "best_route": "Найприбутковіший маршрут",
+    "ship": "Корабель",
+    "total_cost": "Загальні витрати на закупівлю",
+    "total_profit": "Загальний прибуток"
   },
   "categories": {
     "Arms": "Броня: Руки",
